# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "influxdb"
version = "0.4.0"
authors = ["Gero Gerke <11deutron11@gmail.com>"]
edition = "2018"
description = "InfluxDB Driver for Rust"
keywords = ["influxdb", "database", "influx"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/Empty2k12/influxdb-rust"

[badges]
travis-ci = { repository = "Empty2k12/influxdb-rust", branch = "master" }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.4"
influxdb_derive = { version = "0.4.0", optional = true }
regex = "1.4"
surf = { version = "2.2", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[features]
use-serde = ["serde", "serde_json"]
curl-client = ["surf/curl-client"]
h1-client = ["surf/h1-client"]
h1-client-rustls = ["surf/h1-client-rustls"]
hyper-client = ["surf/hyper-client"]
wasm-client = ["surf/wasm-client"]
default = ["use-serde", "hyper-client"]
derive = ["influxdb_derive"]

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
tokio = { version = "1.5", features = ["rt-multi-thread", "macros"] }
